syntax = "proto3";

package small.schema;

import "src/type/type.proto";

message Table {
  string name = 1;
  Columns columns = 2;
  Partition partition = 3;
}

message Columns {
  repeated Column columns = 1;
}

message Column {
  string name = 1;
  small.type.Type type = 2;
  bool is_primary_key = 3;
}

message Partition {
  oneof kind {
    NullPartition null_partition = 1;
    ListPartition list_partition = 2;
  }
}

message NullPartition {}

message ListPartition {
  // the column to partition on
  string column_name = 1;

  // all named partitions
  map<string, ListPartitionItem> partitions = 2;
}

message ListPartitionItem {
  // the values for this partition
  repeated string values = 1;

  Constraints constraints = 2;
}

message Constraints {
  map<string, string> constraints = 1;
}